// QRTable ERD - Step 0.3 (orientation model)
// NOTE: This schema is a planning baseline and will evolve iteratively in later phases.
//
// DATABASE-PER-service ARCHITECTURE:
//   DB "qrtable_saas"     → tenants, pricing_plans, subscriptions
//   DB "qrtable_catalog"  → categories, menu_items, areas, tables
//   DB "qrtable_order"    → orders, order_items, sessions, service_requests (Phase 2)
//   DB "qrtable_payment"  → bills, payments (Phase 3)
//   MongoDB "qrtable_auth" → users, roles (User-Access service)
//
// MULTI-TENANCY: Discriminator Column (tenant_id) on every tenant-scoped entity.
// Cross-service references (VD: order.table_id → tables.id) is logical FK,
// DO NOT enforce using DB foreign key constraint (because it is different from database).

Project qrtable_step_0_3 {
  database_type: "PostgreSQL"
  Note: "Orientation-only ERD for thesis reporting and architecture alignment. Database-per-Service with tenant_id discriminator."
}

Enum tenant_status {
  active
  suspended
  closed
}

Enum category_status {
  active
  inactive
}

Enum menu_item_status {
  available
  out_of_stock
}

Enum table_status {
  available
  occupied
  billing
  cleaning
}

Enum order_status {
  draft
  pending
  processing
  ready
  served
  completed
  canceled
}

Enum bill_status {
  open
  closed
  canceled
}

Enum payment_status {
  pending
  paid
  failed
}

Enum payment_method {
  cash
  stripe
  bank_transfer
}

Enum service_request_type {
  call_staff
  request_bill
  general_help
}

Enum service_request_status {
  pending
  acknowledged
  resolved
}

Table tenants {
  id uuid [pk]
  slug varchar(120) [not null]
  name varchar(120) [not null]
  status tenant_status [not null, default: 'active']
  default_currency varchar(10) [not null, default: 'VND']
  default_locale varchar(20) [not null, default: 'vi-VN']
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    slug [unique]
    (status, created_at)
  }
}

Table pricing_plans {
  id uuid [pk]
  code varchar(40) [not null, unique]
  name varchar(80) [not null]
  max_tables int [not null]
  max_staff int [not null]
  price_vnd bigint [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table subscriptions {
  id uuid [pk]
  tenant_id uuid [not null]
  pricing_plan_id uuid [not null]
  starts_at timestamp [not null]
  expires_at timestamp [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, starts_at)
    (tenant_id, is_active)
  }
}

Table categories {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar(120) [not null]
  status category_status [not null, default: 'active']
  sort_order int [not null, default: 0]
  time_start varchar(5)
  time_end varchar(5)
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Indexes {
    (tenant_id, name) [unique]
    (tenant_id, status)
    (tenant_id, sort_order)
  }
}

Table menu_items {
  id uuid [pk]
  tenant_id uuid [not null]
  category_id uuid [not null]
  name varchar(120) [not null]
  description text
  price_vnd bigint [not null]
  stock_qty int [not null, default: 0]
  status menu_item_status [not null, default: 'available']
  image_url text
  sort_order int [not null, default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Indexes {
    (tenant_id, category_id)
    (tenant_id, status)
    (tenant_id, name)
  }
}

Table areas {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar(100) [not null]
  sort_order int [not null, default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, name) [unique]
    (tenant_id, sort_order)
  }
}

Table tables {
  id uuid [pk]
  tenant_id uuid [not null]
  area_id uuid [not null]
  name varchar(60) [not null]
  capacity int [not null]
  status table_status [not null, default: 'available']
  qr_token varchar(255) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, name) [unique]
    (tenant_id, status)
    (tenant_id, area_id)
  }
}

Table sessions {
  id uuid [pk]
  tenant_id uuid [not null]
  table_id uuid [not null]
  status varchar(30) [not null, note: 'active|closed|expired']
  started_at timestamp [not null]
  last_activity_at timestamp [not null]
  closed_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, table_id, status)
    (tenant_id, started_at)
  }
}

Table orders {
  id uuid [pk]
  tenant_id uuid [not null]
  table_id uuid [not null]
  session_id uuid [not null]
  status order_status [not null, default: 'pending']
  idempotency_key varchar(120) [not null, unique]
  total_amount_vnd bigint [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Indexes {
    (tenant_id, table_id, created_at)
    (tenant_id, session_id, created_at)
    (tenant_id, status)
  }
}

Table order_items {
  id uuid [pk]
  tenant_id uuid [not null]
  order_id uuid [not null]
  menu_item_id uuid [not null]
  quantity int [not null]
  unit_price_vnd bigint [not null]
  note text
  status order_status [not null, default: 'pending']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, order_id)
    (tenant_id, menu_item_id)
  }
}

Table bills {
  id uuid [pk]
  tenant_id uuid [not null]
  session_id uuid [not null, unique]
  subtotal_vnd bigint [not null]
  total_vnd bigint [not null]
  rounding_delta_vnd int [not null, default: 0]
  status bill_status [not null, default: 'open']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, status)
    (tenant_id, created_at)
  }
}

Table payments {
  id uuid [pk]
  tenant_id uuid [not null]
  bill_id uuid [not null]
  amount_vnd bigint [not null]
  rounded_amount_vnd bigint [not null]
  rounding_delta_vnd int [not null]
  method payment_method [not null]
  status payment_status [not null, default: 'pending']
  stripe_session_id varchar(255)
  paid_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, bill_id)
    (tenant_id, status)
    stripe_session_id [unique]
  }
}

Table service_requests {
  id uuid [pk]
  tenant_id uuid [not null]
  table_id uuid [not null]
  session_id uuid [not null]
  request_type service_request_type [not null]
  status service_request_status [not null, default: 'pending']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (tenant_id, table_id, status)
    (tenant_id, created_at)
  }
}

// // ─────────────────────────────────────────────────
// // TABLE GROUPS — Database-per-Service boundaries
// // ─────────────────────────────────────────────────

// TableGroup qrtable_saas [color: #3498db] {
//   tenants
//   pricing_plans
//   subscriptions
// }

// TableGroup qrtable_catalog [color: #2ecc71] {
//   categories
//   menu_items
//   areas
//   tables
// }

// TableGroup qrtable_order [color: #e67e22] {
//   sessions
//   orders
//   order_items
//   service_requests
// }

// TableGroup qrtable_payment [color: #9b59b6] {
//   bills
//   payments
// }

// ─────────────────────────────────────────────────
// RELATIONSHIPS
// ─────────────────────────────────────────────────

// Intra-service relationships (ENFORCED by DB foreign key)
Ref: subscriptions.tenant_id > tenants.id
Ref: subscriptions.pricing_plan_id > pricing_plans.id
Ref: menu_items.category_id > categories.id
Ref: tables.area_id > areas.id
Ref: orders.session_id > sessions.id
Ref: order_items.order_id > orders.id
Ref: bills.session_id > sessions.id
Ref: payments.bill_id > bills.id

// Cross-service relationships (LOGICAL only — NOT enforced by DB FK, resolved via TCP/Kafka)
// These references cross database boundaries. Data integrity maintained at application level.
Ref: categories.tenant_id > tenants.id 
Ref: menu_items.tenant_id > tenants.id
Ref: areas.tenant_id > tenants.id
Ref: tables.tenant_id > tenants.id 
Ref: sessions.tenant_id > tenants.id 
Ref: sessions.table_id > tables.id 
Ref: orders.tenant_id > tenants.id
Ref: orders.table_id > tables.id
Ref: order_items.tenant_id > tenants.id
Ref: order_items.menu_item_id > menu_items.id
Ref: bills.tenant_id > tenants.id 
Ref: payments.tenant_id > tenants.id 
Ref: service_requests.tenant_id > tenants.id
Ref: service_requests.table_id > tables.id 
Ref: service_requests.session_id > sessions.id